--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8099
 
 operation:
-  serverport: localhost:8086
+  server: http://192.168.1.11:8099
 
 picture:
   url:  d:\\AlarmPicture
